...
        android:id="@+id/displayImageView"
        android:layout_width="139dp"
        android:layout_height="138dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toStartOf="@+id/rightButton"
        app:layout_constraintStart_toEndOf="@+id/leftButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageButton
        android:id="@+id/leftButton"
...
        android:text="@string/locationDefault"
        app:layout_constraintEnd_toEndOf="@+id/timestamp"
        app:layout_constraintStart_toStartOf="@+id/timestamp"
        app:layout_constraintTop_toBottomOf="@+id/timestamp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/captionInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:focusableInTouchMode="true"
        android:hint="@string/captionHint"
        app:layout_constraintEnd_toStartOf="@+id/updateCaptionButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTextView">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
...
        android:layout_marginEnd="32dp"
        android:text="@string/updateCaptionButtonLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/captionInputLayout" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/searchButtonLabel"
        app:layout_constraintStart_toStartOf="@+id/captionInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/captionInputLayout" />
...
