<resources>
    <string name="app_name">Photo Gallery</string>

    <string name="snapButtonLabel">Snap</string>
    <string name="searchButtonLabel">Filter</string>
    <string name="captionHint">Caption</string>
    <string name="updateCaptionButtonLabel">Update</string>
    <string name="timestampDefault">dd/mm/yyyy hh:ss</string>
    <string name="locationDefault">location unknown</string>

    <string name="startDateLabel">Start Date</string>
    <string name="endDateLabel">End Date</string>
    <string name="locationDefaultListItem">n/a</string>
    <string name="applyFiltersButtonLabel">Search</string>
</resources>

