...
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/applyFiltersButton">
    </ListView>

    <Button
        android:id="@+id/applyFiltersButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
